some css styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <script src="java.js"></script>
+    
+    <div id="startpage">
+        <img src="assets/playbutton3.png" alt="playbutton">
+        <h3> Press Start </h3>
+    </div>
 
-    <h1></h1>
 </body>
 </html>
