--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pac-Man Maze</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesstar.css">
 </head>
 
 <body>
+    
     <canvas id="gameCanvas"></canvas>
+    <div class="cloud cloud1"><img src="clouds/cloud1.png" alt="Cloud 1"></div>
+    <div class="cloud cloud2"><img src="clouds/cloud2.png" alt="Cloud 2"></div>
+    <div class="cloud cloud3"><img src="clouds/cloud3.png" alt="Cloud 3"></div>
+    <div class="cloud cloud4"><img src="clouds/cloud4.png" alt="Cloud 4"></div>
+    <div class="cloud cloud5"><img src="clouds/cloud1.png" alt="Cloud 5"></div>
+    <div class="cloud cloud6"><img src="clouds/cloud2.png" alt="Cloud 6"></div>
+    <div class="cloud cloud7"><img src="clouds/cloud3.png" alt="Cloud 7"></div>
+    <div class="cloud cloud8"><img src="clouds/cloud4.png" alt="Cloud 8"></div>
+
+    <section>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </section>
     <script src="java.js"></script>
 
-    <h1></h1>
+
 </body>
 </html>
