--- a/index.html
+++ b/index.html
@@ -46,15 +46,27 @@
     </div>
     
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const startPage = document.getElementById('startpage');
-            const gameCanvas = document.getElementById('gameCanvas');
-            const playButton = startPage.querySelector('img');
-            playButton.addEventListener('click', function() {
-                startPage.classList.add('hidden');
-                gameCanvas.style.opacity = '1';
-            });
-        });
+        document.addEventListener('DOMContentLoaded', function () {
+    const startPage = document.getElementById('startpage');
+    const gameCanvas = document.getElementById('gameCanvas');
+    const playButton = startPage.querySelector('img');
+
+    // Function to start the game
+    function startGame() {
+        startPage.classList.add('hidden');
+        gameCanvas.style.opacity = '1';
+    }
+
+    // Click event for the play button
+    playButton.addEventListener('click', startGame);
+
+    // Keydown event for Enter and Spacebar
+    document.addEventListener('keydown', function (event) {
+        if (event.key === 'Enter' || event.key === ' ') { // Check for Enter or Spacebar
+            startGame();
+        }
+    });
+});
     </script>
 
 </body>
