--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <h1>YOU WIN!</h1>
         <button id="playAgain">Play Again</button>
     </div>
+
+    <div id="gameOverScreen" class="hidden">
+        <h1>GAME OVER!</h1>
+        <button id="restartGame">Play Again</button>
+    </div>
+    
     
     <script>
         document.addEventListener('DOMContentLoaded', function () {
